Revert "Fix viewport on mobile and make docker file cache better"
This reverts commit 430ed4106d844e580cc30bc6d449bfe368c684cd.

--- a/ui/round/src/style.css
+++ b/ui/round/src/style.css
@@ -10,12 +10,10 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  min-height: 100dvh;
   background-color: #f5f5f0;
 }
 
 #app {
   width: 100%;
   height: 100vh;
-  height: 100dvh;
 }
